fixed scrollbar visual, just switched to auto instead of scroll

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -435,7 +435,7 @@ h2 {
 
 .form--update {
 	width: 80%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	position: relative;
 	padding: 0 0 1em 0;
 }
